// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoMetadata renders with view props 1`] = `
<div
  className="video-metadata"
>
  <h3>
    Stargazer - A Chillwave Mix
  </h3>
  <div
    className="video-stats"
  >
    <span>
      50,000
       views
    </span>
    <div
      className="video-actions"
    >
      <Rating
        dislikes={25}
        likes={75}
      />
      <Button
        as="button"
        basic={true}
        icon={true}
        labelPosition="left"
      >
        <Icon
          as="i"
          name="share"
        />
        Share
      </Button>
      <Button
        as="button"
        basic={true}
        icon={true}
      >
        <Icon
          as="i"
          name="plus circle"
        />
      </Button>
      <Button
        as="button"
        basic={true}
        icon={true}
      >
        <Icon
          as="i"
          name="ellipsis horizontal"
        />
      </Button>
    </div>
  </div>
  <Divider />
</div>
`;

exports[`VideoMetadata renders without props 1`] = `
<div
  className="video-metadata"
>
  <h3>
    Stargazer - A Chillwave Mix
  </h3>
  <div
    className="video-stats"
  >
    <span>
      NaN
       views
    </span>
    <div
      className="video-actions"
    >
      <Rating
        dislikes={25}
        likes={75}
      />
      <Button
        as="button"
        basic={true}
        icon={true}
        labelPosition="left"
      >
        <Icon
          as="i"
          name="share"
        />
        Share
      </Button>
      <Button
        as="button"
        basic={true}
        icon={true}
      >
        <Icon
          as="i"
          name="plus circle"
        />
      </Button>
      <Button
        as="button"
        basic={true}
        icon={true}
      >
        <Icon
          as="i"
          name="ellipsis horizontal"
        />
      </Button>
    </div>
  </div>
  <Divider />
</div>
`;
